# power-control-suite

./: .gitignore
common/hal/: adc_def.h  file_parse.cpp  power_config.h  power_control.cpp  power_control.h  proto_pkg.h  stm32_comm.cpp  stm32_comm.h  usb_driver.h
evb_project/: .mxproject  CMakeLists.txt  STM32H503xx_FLASH.ld  STM32H503xx_RAM.ld  evb_project.ioc
evb_project/Core/Inc/: INA238.h  INA260.h  dac_driver.h  main.h  proto_pkg.h  sample_handler.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  usb_message_handler.h  usbd_customhid_if.h  user_callback.h
evb_project/Core/Src/: INA238.c  INA260.c  dac_driver.c  main.c  sample_handler.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  system_stm32h5xx.c  uart.c  usb_message_handler.c  usbd_customhid_if.c  user_callback.c
evb_project/Drivers/CMSIS/Include/: cachel1_armv7.h  cmsis_gcc.h  core_cm33.h  mpu_armv8.h  pac_armv81.h
evb_project/Drivers/STM32H5xx_HAL_Driver/Inc/: stm32h5xx_hal.h  stm32h5xx_hal_cortex.h  stm32h5xx_hal_def.h  stm32h5xx_hal_dma_ex.h  stm32h5xx_hal_exti.h  stm32h5xx_hal_flash.h  stm32h5xx_hal_i3c.h  stm32h5xx_hal_pcd.h  stm32h5xx_hal_pwr.h  stm32h5xx_hal_rcc_ex.h  stm32h5xx_hal_smbus.h  stm32h5xx_hal_spi.h  stm32h5xx_hal_tim.h  stm32h5xx_hal_tim_ex.h  stm32h5xx_hal_uart.h  stm32h5xx_hal_uart_ex.h  stm32h5xx_ll_cortex.h  stm32h5xx_ll_crs.h  stm32h5xx_ll_gpio.h  stm32h5xx_ll_i3c.h  stm32h5xx_ll_pwr.h  stm32h5xx_ll_tim.h  stm32h5xx_ll_usb.h  stm32h5xx_util_i3c.h
evb_project/Drivers/STM32H5xx_HAL_Driver/Src/: stm32h5xx_hal.c  stm32h5xx_hal_exti.c  stm32h5xx_hal_flash.c  stm32h5xx_hal_pcd.c  stm32h5xx_hal_pcd_ex.c  stm32h5xx_hal_pwr.c  stm32h5xx_hal_rcc_ex.c  stm32h5xx_hal_smbus.c  stm32h5xx_hal_smbus_ex.c  stm32h5xx_hal_spi_ex.c  stm32h5xx_hal_tim.c  stm32h5xx_hal_tim_ex.c  stm32h5xx_hal_uart.c  stm32h5xx_hal_uart_ex.c  stm32h5xx_ll_usb.c
evb_project/USB/Core/Inc/: usbd_conf.h  usbd_core.h  usbd_def.h  usbd_ioreq.h
evb_project/USB/Core/Src/: usbd_conf.c  usbd_ctlreq.c
evb_project/cmake/stm32cubemx/: CMakeLists.txt
host_usb_demo/: CMakeLists.txt  file_parse.cpp  file_parse.h  log.h  main.cpp  power_config.h  power_control.cpp  power_control.h  proto.cpp  proto.h  protocol.cpp  protocol.h  stm32_comm.cpp  stm32_comm.h  todo.md  usb_driver.cpp  usb_driver.h
host_usb_demo/config/: power_config.json
host_usb_demo/hal/: stm32_comm.h  usb_driver.cpp  usb_driver.h
host_usb_demo/scirpts/: build.bat  release.bat  run.bat
i2c_demo/: .mxproject  CMakeLists.txt  i2c_demo.ioc
i2c_demo/Core/Inc/: INA238.h  INA260.h  smbus_callback.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
i2c_demo/Core/Src/: INA238.c  INA260.c  main.c  smbus_callback.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
i2c_demo/Drivers/CMSIS/Include/: cachel1_armv7.h  core_cm0.h  core_cm35p.h
i2c_demo/Drivers/STM32H5xx_HAL_Driver/Inc/: stm32h5xx_hal.h  stm32h5xx_hal_adc.h  stm32h5xx_hal_adc_ex.h  stm32h5xx_hal_cec.h  stm32h5xx_hal_comp.h  stm32h5xx_hal_cordic.h  stm32h5xx_hal_crc.h  stm32h5xx_hal_cryp.h  stm32h5xx_hal_cryp_ex.h  stm32h5xx_hal_dac.h  stm32h5xx_hal_dac_ex.h  stm32h5xx_hal_dcache.h  stm32h5xx_hal_dcmi.h  stm32h5xx_hal_def.h  stm32h5xx_hal_dts.h  stm32h5xx_hal_eth.h  stm32h5xx_hal_eth_ex.h  stm32h5xx_hal_exti.h  stm32h5xx_hal_fdcan.h  stm32h5xx_hal_fmac.h  stm32h5xx_hal_gpio.h  stm32h5xx_hal_gtzc.h  stm32h5xx_hal_hash.h  stm32h5xx_hal_hcd.h  stm32h5xx_hal_i2c.h  stm32h5xx_hal_i2s.h  stm32h5xx_hal_icache.h  stm32h5xx_hal_irda.h  stm32h5xx_hal_iwdg.h  stm32h5xx_hal_lptim.h  stm32h5xx_hal_mmc.h  stm32h5xx_hal_mmc_ex.h  stm32h5xx_hal_nand.h  stm32h5xx_hal_nor.h  stm32h5xx_hal_opamp.h  stm32h5xx_hal_otfdec.h  stm32h5xx_hal_pka.h  stm32h5xx_hal_pssi.h  stm32h5xx_hal_pwr_ex.h  stm32h5xx_hal_ramcfg.h  (+50 more)
i2c_demo/Drivers/STM32H5xx_HAL_Driver/Src/: stm32h5xx_hal.c  stm32h5xx_hal_adc.c  stm32h5xx_hal_adc_ex.c  stm32h5xx_hal_cec.c  stm32h5xx_hal_comp.c  stm32h5xx_hal_cordic.c  stm32h5xx_hal_crc.c  stm32h5xx_hal_crc_ex.c  stm32h5xx_hal_cryp.c  stm32h5xx_hal_cryp_ex.c  stm32h5xx_hal_dac.c  stm32h5xx_hal_dac_ex.c  stm32h5xx_hal_dcache.c  stm32h5xx_hal_dcmi.c  stm32h5xx_hal_dts.c  stm32h5xx_hal_eth.c  stm32h5xx_hal_eth_ex.c  stm32h5xx_hal_fdcan.c  stm32h5xx_hal_flash.c  stm32h5xx_hal_fmac.c  stm32h5xx_hal_gpio.c  stm32h5xx_hal_gtzc.c  stm32h5xx_hal_hash.c  stm32h5xx_hal_hcd.c  stm32h5xx_hal_i2c.c  stm32h5xx_hal_i2c_ex.c  stm32h5xx_hal_i2s.c  stm32h5xx_hal_i3c.c  stm32h5xx_hal_icache.c  stm32h5xx_hal_irda.c  stm32h5xx_hal_iwdg.c  stm32h5xx_hal_lptim.c  stm32h5xx_hal_mmc.c  stm32h5xx_hal_mmc_ex.c  stm32h5xx_hal_nand.c  stm32h5xx_hal_nor.c  stm32h5xx_hal_opamp.c  (+63 more)
i2c_demo/cmake/stm32cubemx/: CMakeLists.txt
power_control/: CMakeLists.txt  readme.md
power_control/.qtcreator/: CMakeLists.txt.user.9bacb34
power_control/config/: power_config.json
power_control/scirpts/: build.bat
power_control/src/: config_service.cpp  config_service.h  debug_window.cpp  debug_window.h  device_session_service.cpp  device_session_service.h  log.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sample_channel_map.h  sampling_state_machine.cpp  sampling_state_machine.h  waveform_recorder.cpp  waveform_recorder.h  waveform_widget.cpp  waveform_widget.h
power_control/src/hal/: proto_pkg.h  stm32_comm.cpp  stm32_comm.h  usb_driver.cpp  usb_driver.h
scripts/: beautify_style.bat
scripts/build_utils/astyle/: .astylerc  astyle  beautify.bat  space_2_tab.py
spi_demo/: .mxproject  CMakeLists.txt  STM32H503xx_FLASH.ld  spi_demo.ioc
spi_demo/Core/Inc/: dac_driver.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  user_callback.h
spi_demo/Core/Src/: dac_driver.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  syscalls.c  user_callback.c
spi_demo/cmake/stm32cubemx/: CMakeLists.txt
stm32demousb/: .mxproject  CMakeLists.txt  STM32H503xx_FLASH.ld  STM32H503xx_RAM.ld  stm32demousb.ioc
stm32demousb/Core/Inc/: dac_driver.h  proto_pkg.h  stm32h5xx_hal_conf.h  usbd_customhid_if.h
stm32demousb/Core/Src/: dac_driver.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  sysmem.c  system_stm32h5xx.c  uart.c  usbd_customhid_if.c
stm32demousb/cmake/stm32cubemx/: CMakeLists.txt
(+889 files in other folders)
